fix main overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -42,6 +42,7 @@ header {
 
 main {
   padding-top: var(--header-height);
+  overflow: hidden;
 }
 
 #home {
